--- a/package.json
+++ b/package.json
@@ -3,8 +3,7 @@
   "version": "1.0.0",
   "description": "",
   "main": "gulpfile.js",
-  "scripts": {
-  },
+  "scripts": {},
   "author": "",
   "license": "CC BY-NC-SA 4.0",
   "devDependencies": {
@@ -17,9 +16,11 @@
   },
   "dependencies": {
     "babel-preset-es2015": "^6.24.1",
+    "gulp-autoprefixer": "^4.0.0",
     "gulp-babel": "^6.1.2",
     "gulp-imagemin": "^3.0.3",
     "gulp-load-plugins": "^1.3.0",
-    "gulp-uglify": "^2.0.0"
+    "gulp-minify-css": "^1.2.4",
+    "gulp-uglify": "^3.0.0"
   }
 }
